# pico-info-screen

./: .gitignore  LICENSE.txt
client/: CMakeLists.txt  pico-info-screen-config.h  pico-info-screen.c
server/: common.php  config.php  index.php  initdb.sql  weather.php
